tests/parser_samples/valid/id_with_params.mas
%i i1 {
    !nop;
}

%i i2(p1) {
    !nop;
}

%i i3(p1, p2) {
    !nop;
}

%i i4(p1, p2, p3) {
    !nop;
}