tests/parser_samples/invalid/microinstruction/3.mas
%i a {
    a | b(1) | c @a;
    a | b(1) | c @;
}